Fix cpplint working directory so header guard checks are correctly relative. Remove static --root check to allow user control to specify the option.

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -13,6 +13,8 @@
         Run cpplint.py on the fly when you are editing C++ source code.<br/>
         Highlight corresponding lines with messages about which cpplint.py complains.<br/>
         Cygwin/MinGW environment is supported as well.<br/><br/>
+        For advanced cpplint features, such as setting project repository root for header guard checks, use the PyPI
+        hosted cpplint at https://pypi.python.org/pypi/cpplint.<br/>
 
       <b>Usage:</b><br/>
         Install this plugin.<br/>
