--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,13 +1,13 @@
 <idea-plugin>
   <id>com.github.itechbear.clion.cpplint</id>
   <name>CLion-cpplint</name>
-  <version>1.0.7</version>
+  <version>1.0.8</version>
   <vendor email="itechbear@gmail.com" url="https://github.com/itechbear">itechbear</vendor>
 
   <description><![CDATA[
       The first C++ lint plugin for Clion. <br /><br />
 
-      Should you like this plugin, please star my github project. Thanks! <br /><br />
+      If you find this plugin useful, welcome to star it. Thanks! <br /><br />
 
       <b>Features:</b><br/>
         Run cpplint.py on the fly when you are editing C++ source code.<br/>
@@ -27,6 +27,8 @@
     ]]></description>
 
   <change-notes><![CDATA[
+    1.0.8 Code improvements. Refactored code <br /><br />
+
     1.0.7 Bugfix. To be compatible with CLion 2017.3. <br /><br />
 
     1.0.6 Bugfix. Reverted a change that broke this plugin. <br /><br />
@@ -54,7 +56,10 @@
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
     <localInspection implementationClass="com.github.itechbear.clion.cpplint.CpplintInspection"
-                     displayName="cpplint inspection" groupName="C++: line" id="CpplintInspection" level="WARNING"
+                     displayName="cpplint inspection"
+                     groupName="C++: line"
+                     id="CpplintInspection"
+                     level="WARNING"
                      enabledByDefault="true"/>
     <applicationConfigurable instance="com.github.itechbear.clion.cpplint.Option"
                              displayName="cpplint option"/>
