--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,23 @@
 plugins {
-    id 'org.jetbrains.intellij' version '0.3.5'
+    id 'org.jetbrains.intellij' version '0.4.1'
 }
 
-import org.apache.tools.ant.taskdefs.condition.Os;
-
 group 'com.github.itechbear'
-version '1.0.9'
+version '1.1.0'
 
 repositories {
     mavenCentral()
 }
 
 intellij {
-    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-        localPath 'D:\\ProgramFiles\\CLion'
-    } else if (Os.isFamily(Os.FAMILY_MAC)) {
-        localPath System.getProperty('user.home') + '/Applications/CLion.app/Contents'
-    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
-        localPath System.getProperty('user.home') + '/Applications/CLion'
-    } else {
-        localPath ''
-    }
+    version 'CL-183.4925'
 
     plugins = []
     pluginName 'CLion-cpplint'
+}
+
+instrumentCode {
+    compilerVersion '183.4886.37'
 }
 
 patchPluginXml {
