--- a/build.gradle
+++ b/build.gradle
@@ -1,39 +1,25 @@
 plugins {
-    id 'org.jetbrains.intellij' version '0.3.12'
+  id "org.jetbrains.intellij" version "0.4.7"
+  id "org.jetbrains.kotlin.jvm" version "1.3.21"
 }
 
 group 'com.github.itechbear'
-version '1.1.0'
+version "${clionVersion}"
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 intellij {
-    String osName = org.gradle.internal.os.OperatingSystem.current().getName();
-    String osVersion = org.gradle.internal.os.OperatingSystem.current().getVersion();
-    println "*** $osName $osVersion was detected."
+  pluginName 'CLion-cpplint'
+  version "CL-${clionVersion}"
+  downloadSources true
 
-    if (org.gradle.internal.os.OperatingSystem.current().isLinux()) {
-        localPath System.getProperty('user.home') + '/Applications/CLion'
-    } else if (org.gradle.internal.os.OperatingSystem.current().isUnix()) {
-        localPath System.getProperty('user.home') + '/Applications/CLion'
-    } else if (org.gradle.internal.os.OperatingSystem.current().isWindows()) {
-        localPath 'D:\\ProgramFiles\\CLion'
-    } else if (org.gradle.internal.os.OperatingSystem.current().isMacOsX()) {
-        localPath System.getProperty('user.home') + '/Applications/CLion.app/Contents'
-    } else {
-        localPath ''
-    }
+  plugins = []
 
-    // downloadSources false
-
-    plugins = []
-    pluginName 'CLion-cpplint'
+  updateSinceUntilBuild true
 }
 
 patchPluginXml {
-    changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+  changeNotes ""
 }
